force-app/main/default/objects/Item_del_Contrato__c/Item_del_Contrato__c.object-meta.xml
<CustomObject>
    <description>Addendum Variety item</description>
    <label>Schedule A Variety</label>
    <nameField>
        <label>Schedule A Variety</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules A Variety</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>