force-app/main/default/objects/Item_del_Contrato__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Contrato_de_Multiplicacion__r.Multiplicador__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>