force-app/main/default/objects/Item_del_Contrato__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates category of the licensee product</description>
    <inlineHelpText>Indicates category of the licensee product</inlineHelpText>
    <label>Category</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipName>Items_del_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>