force-app/main/default/objects/Item_del_Contrato__c/fields/Contract_Technology__c.field-meta.xml
<CustomField>
    <fullName>Contract_Technology__c</fullName>
    <formula>Cultivar__r.Tecnologia__c</formula>
    <label>Contract Technology</label>
    <type>Text</type>
</CustomField>