force-app/main/default/objects/Item_del_Contrato__c/fields/Contrato_de_Multiplicacion__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Multiplicacion__c</fullName>
    <description>Agreement related to</description>
    <inlineHelpText>Agreement related to</inlineHelpText>
    <label>Schedule A</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Schedules A Variety</relationshipLabel>
    <relationshipName>Items_del_Contrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>