force-app/main/default/objects/Item_del_Contrato__c/fields/Cultivar__c.field-meta.xml
<CustomField>
    <fullName>Cultivar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cultivar por el/los que se confecciona el contrato</description>
    <inlineHelpText>Cultivar por el/los que se confecciona el contrato</inlineHelpText>
    <label>Product Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Royalty</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Schedules A Variety</relationshipLabel>
    <relationshipName>Items_del_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>