force-app/main/default/objects/Item_del_Contrato__c/fields/Exclusive__c.field-meta.xml
<CustomField>
    <fullName>Exclusive__c</fullName>
    <label>Exclusive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>