force-app/main/default/objects/Item_del_Contrato__c/fields/License_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Date__c</fullName>
    <formula>Contrato_de_Multiplicacion__r.License_Date__c</formula>
    <label>License Date</label>
    <type>Date</type>
</CustomField>