force-app/main/default/objects/Item_del_Contrato__c/fields/Licensee_Variety_ID__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Variety_ID__c</fullName>
    <label>Licensee Variety ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>