force-app/main/default/objects/Item_del_Contrato__c/fields/My_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>My_Portfolio__c</fullName>
    <formula>AND(IF(Contrato_de_Multiplicacion__r.RecordType.Name=&quot;Test Seed Schedule A&quot;,false,true),Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Portfolio</label>
    <type>Checkbox</type>
</CustomField>