force-app/main/default/objects/Item_del_Contrato__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <description>Indica la cantidad por la que se cerró el aditivo</description>
    <label>Quantidade</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>