force-app/main/default/objects/Item_del_Contrato__c/fields/Schedule_Account__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Account__c</fullName>
    <formula>Contrato_de_Multiplicacion__r.Multiplicador__c</formula>
    <label>Schedule Account</label>
    <type>Text</type>
</CustomField>