force-app/main/default/objects/Item_del_Contrato__c/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <formula>Cultivar__r.Variedade__r.Name</formula>
    <label>Variety Name</label>
    <type>Text</type>
</CustomField>