force-app/main/default/objects/Item_del_Contrato__c/fields/Variety_Id__c.field-meta.xml
<CustomField>
    <fullName>Variety_Id__c</fullName>
    <formula>Cultivar__r.Variedade__r.Id_Largo__c</formula>
    <label>Variety Id</label>
    <type>Text</type>
</CustomField>